Closed Bug 1102809 Opened 10 years ago Closed 9 years ago

Fixed -Wunused-function warnings found in mingw build.

Categories

(Core :: Graphics, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla36

People

(Reporter: jacek, Assigned: jacek)

Details

Attachments

(1 file)

Attached patch fixSplinter Review
I marked it as Graphics bug, because that's what the patch changes the most. Those are not all warnings in the tree, but it fixes the most noisy ones (mostly because they are in headers).
Attachment #8526633 - Flags: review?(matt.woodrow)
Attachment #8526633 - Flags: review?(matt.woodrow) → review+
https://hg.mozilla.org/mozilla-central/rev/ced4220ad4df
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla36
You need to log in before you can comment on or make changes to this bug.