Bug 1102809 - Fixed -Wunused-function warnings found in mingw build. r=mattwoodrow